IE fix input spacing

--- a/public/assets/css/ie.styl
+++ b/public/assets/css/ie.styl
@@ -20,4 +20,9 @@
     display block 
   }
   
+  input[type="text"], input[type="password"], input[type="email"] {
+    margin-top 8px
+    margin-bottom 8px
+  }
+  
 }
